--- a/5-2.ipynb
+++ b/5-2.ipynb
@@ -173,8 +173,7 @@
    ],
    "source": [
     "model = linear_model.LinearRegression()\n",
-    "model.fit(one_hot_df[['city_NYC', 'city_SF', 'city_Seattle']],\n",
-    "          one_hot_df['Rent'])\n",
+    "model.fit(one_hot_df[['city_NYC', 'city_SF', 'city_Seattle']], one_hot_df['Rent'])\n",
     "model.coef_"
    ]
   },
