--- a/5-5.ipynb
+++ b/5-5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "4174"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,14 +28,14 @@
     "\n",
     "review_df = pd.DataFrame(js)\n",
     "# Define m as equal to the unique number of business_ids\n",
-    "m = len(review_df.business_id.unique())\n",
+    "m = len(review_df['business_id'].unique())\n",
     "\n",
     "m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        " '6ozycU1RpktNG2-1BroVtw']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,6 @@
     "h = FeatureHasher(n_features=m, input_type='string')\n",
     "f = h.transform(review_df['business_id'])\n",
     "\n",
-    "#@# # How does this affect feature interpretability?\n",
     "# 変換後の特徴量が解釈が困難であることを確認\n",
     "review_df['business_id'].unique().tolist()[0:5]"
    ]
