フォーマット修正

--- a/2-3-1.ipynb
+++ b/2-3-1.ipynb
@@ -831,17 +831,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.00152439, 0.00177498, 0.00146871, ..., 0.00307663, 0.0047472 ,\n",
-       "       0.00109283])"
+       "array([219., 255., 211., ..., 442., 682., 157.])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,16 +853,73 @@
     "df = pd.read_csv('data/news/OnlineNewsPopularity.csv', delimiter=', ', engine='python')\n",
     "\n",
     "# 元データ（記事中の単語数）\n",
-    "df['n_tokens_content'].values\n",
-    "\n",
+    "df['n_tokens_content'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.02584376, 0.03009205, 0.02489969, ..., 0.05215955, 0.08048147,\n",
+       "       0.01852726])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Min-Max スケーリング\n",
     "df['minmax'] = preproc.minmax_scale(df[['n_tokens_content']])\n",
-    "df['minmax'].values\n",
-    "\n",
+    "df['minmax'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.69521045, -0.61879381, -0.71219192, ..., -0.2218518 ,\n",
+       "        0.28759248, -0.82681689])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# 標準化（定義より出力が負になることもある）\n",
     "df['standardized'] = preproc.StandardScaler().fit_transform(df[['n_tokens_content']])\n",
-    "df['standardized'].values\n",
-    "\n",
+    "df['standardized'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00152439, 0.00177498, 0.00146871, ..., 0.00307663, 0.0047472 ,\n",
+       "       0.00109283])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# L2 正規化\n",
     "df['l2_normalized'] = preproc.normalize(df[['n_tokens_content']], axis=0)\n",
     "df['l2_normalized'].values"
@@ -935,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -960,12 +1016,11 @@
        "       'max_positive_polarity', 'avg_negative_polarity',\n",
        "       'min_negative_polarity', 'max_negative_polarity', 'title_subjectivity',\n",
        "       'title_sentiment_polarity', 'abs_title_subjectivity',\n",
-       "       'abs_title_sentiment_polarity', 'shares', 'minmax', 'standardized',\n",
-       "       'l2_normalized'],\n",
+       "       'abs_title_sentiment_polarity', 'shares'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,12 +1030,13 @@
     "from sklearn.model_selection import train_test_split\n",
     "import sklearn.preprocessing as preproc\n",
     "\n",
+    "df = pd.read_csv('data/news/OnlineNewsPopularity.csv', delimiter=', ', engine='python')\n",
     "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +1045,7 @@
        "(39644, 170)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
