--- a/3.ipynb
+++ b/3.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 例3-1. nグラムの計算"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +25,7 @@
        "['0', '00', '000', '007', '00a', '00am', '00pm', '01', '02', '03']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +87,7 @@
        " 'òc châm']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +116,7 @@
        " '0 75 to']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,8 +126,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 例3-2. 品詞タグ付けとチャンク化"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -265,20 +279,112 @@
     "    print([doc.text, doc.pos_, doc.tag_])\n",
     "\n",
     "# spaCy は基本的な名詞句も .noun_chunks で提供します\n",
-    "print([chunk for chunk in doc_df[4].noun_chunks])\n"
+    "print([chunk for chunk in doc_df[4].noun_chunks])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['general manager', 'scott petello', 'good egg', 'scott', \"n't walk\", '... ..', 'mistakes', 'thanks', 'scott', 'awesome staff', '... ... ...']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[('General', 'NNP'),\n",
+       " ('Manager', 'NNP'),\n",
+       " ('Scott', 'NNP'),\n",
+       " ('Petello', 'NNP'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('a', 'DT'),\n",
+       " ('good', 'JJ'),\n",
+       " ('egg', 'NN'),\n",
+       " ('Not', 'RB'),\n",
+       " ('to', 'TO'),\n",
+       " ('go', 'VB'),\n",
+       " ('into', 'IN'),\n",
+       " ('detail', 'NN'),\n",
+       " ('but', 'CC'),\n",
+       " ('let', 'VB'),\n",
+       " ('me', 'PRP'),\n",
+       " ('assure', 'VB'),\n",
+       " ('you', 'PRP'),\n",
+       " ('if', 'IN'),\n",
+       " ('you', 'PRP'),\n",
+       " ('have', 'VBP'),\n",
+       " ('any', 'DT'),\n",
+       " ('issues', 'NNS'),\n",
+       " ('albeit', 'IN'),\n",
+       " ('rare', 'NN'),\n",
+       " ('speak', 'NN'),\n",
+       " ('with', 'IN'),\n",
+       " ('Scott', 'NNP'),\n",
+       " ('and', 'CC'),\n",
+       " ('treat', 'VB'),\n",
+       " ('the', 'DT'),\n",
+       " ('guy', 'NN'),\n",
+       " ('with', 'IN'),\n",
+       " ('some', 'DT'),\n",
+       " ('respect', 'NN'),\n",
+       " ('as', 'IN'),\n",
+       " ('you', 'PRP'),\n",
+       " ('state', 'NN'),\n",
+       " ('your', 'PRP$'),\n",
+       " ('case', 'NN'),\n",
+       " ('and', 'CC'),\n",
+       " ('I', 'PRP'),\n",
+       " (\"'d\", 'MD'),\n",
+       " ('be', 'VB'),\n",
+       " ('surprised', 'VBN'),\n",
+       " ('if', 'IN'),\n",
+       " ('you', 'PRP'),\n",
+       " ('do', 'VBP'),\n",
+       " (\"n't\", 'RB'),\n",
+       " ('walk', 'VB'),\n",
+       " ('out', 'RP'),\n",
+       " ('totally', 'RB'),\n",
+       " ('satisfied', 'JJ'),\n",
+       " ('as', 'IN'),\n",
+       " ('I', 'PRP'),\n",
+       " ('just', 'RB'),\n",
+       " ('did', 'VBD'),\n",
+       " ('Like', 'IN'),\n",
+       " ('I', 'PRP'),\n",
+       " ('always', 'RB'),\n",
+       " ('say', 'VBP'),\n",
+       " ('..', 'VBP'),\n",
+       " ('Mistakes', 'NNS'),\n",
+       " ('are', 'VBP'),\n",
+       " ('inevitable', 'JJ'),\n",
+       " ('it', 'PRP'),\n",
+       " (\"'s\", 'VBZ'),\n",
+       " ('how', 'WRB'),\n",
+       " ('we', 'PRP'),\n",
+       " ('recover', 'VBP'),\n",
+       " ('from', 'IN'),\n",
+       " ('them', 'PRP'),\n",
+       " ('that', 'WDT'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('important', 'JJ'),\n",
+       " ('Thanks', 'NNS'),\n",
+       " ('to', 'TO'),\n",
+       " ('Scott', 'NNP'),\n",
+       " ('and', 'CC'),\n",
+       " ('his', 'PRP$'),\n",
+       " ('awesome', 'JJ'),\n",
+       " ('staff', 'NN'),\n",
+       " ('You', 'PRP'),\n",
+       " (\"'ve\", 'VBP'),\n",
+       " ('got', 'VBN'),\n",
+       " ('a', 'DT'),\n",
+       " ('customer', 'NN'),\n",
+       " ('for', 'IN'),\n",
+       " ('life', 'NN'),\n",
+       " ('^', 'NN')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -290,10 +396,32 @@
     "# NLTKTagger を使うことをおすすめする。\n",
     "blob_df = review_df['text'].apply(TextBlob)\n",
     "\n",
-    "blob_df[4].tags\n",
-    "\n",
+    "blob_df[4].tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['general manager', 'scott petello', 'good egg', 'scott', \"n't walk\", '... ..', 'mistakes', 'thanks', 'scott', 'awesome staff', '... ... ...']\n"
+     ]
+    }
+   ],
+   "source": [
     "print([np for np in blob_df[4].noun_phrases])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
