--- a/5-5.ipynb
+++ b/5-5.ipynb
@@ -23,7 +23,7 @@
     "        js.append(json.loads(f.readline()))\n",
     "\n",
     "review_df = pd.DataFrame(js)\n",
-    "# Define m as equal to the unique number of business_ids\n",
+    "# mにbusiness_idのユニーク数を代入\n",
     "m = len(review_df['business_id'].unique())\n",
     "\n",
     "m"
