--- a/8-1-2.ipynb
+++ b/8-1-2.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 例8-1. 画像勾配を算出するPythonコードの例"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,16 +29,26 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from skimage import data, color\n",
+    "\n",
+    "### 画像をロードしてグレースケールに変換する\n",
     "image = color.rgb2gray(data.chelsea())\n",
+    "\n",
+    "# 水平方向の勾配を中心化した1次元フィルタ（centered 1D filter）を用いて算出する。\n",
+    "# 具体的には境界に位置しないピクセルをその左右に隣接するピクセル値の差で置き換えている。\n",
+    "# 画像両端のピクセルの勾配を0とする。\n",
     "gx = np.empty(image.shape, dtype=np.double)\n",
     "gx[:, 0] = 0\n",
     "gx[:, -1] = 0\n",
     "gx[:, 1:-1] = image[:, :-2] - image[:, 2:]\n",
+    "\n",
+    "# 垂直方向の勾配も同様に算出する\n",
     "gy = np.empty(image.shape, dtype=np.double)\n",
     "gy[0, :] = 0\n",
     "gy[-1, :] = 0\n",
     "gy[1:-1, :] = image[:-2, :] - image[2:, :]\n",
-    "fig, (ax1, ax2, ax3) = plt.subplots(3, 1,figsize=(5, 9),sharex=True,sharey=True)\n",
+    "\n",
+    "# Matplotlibのおまじない\n",
+    "fig, (ax1, ax2, ax3) = plt.subplots(3, 1, figsize=(5, 9), sharex=True, sharey=True)\n",
     "\n",
     "ax1.axis('off')\n",
     "ax1.imshow(image, cmap=plt.cm.gray)\n",
@@ -50,8 +67,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 例8-2. 画像へのガウシアンフィルタの適用例"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1. , -0.5,  0. ,  0.5,  1. ],\n",
+       "       [-1. , -0.5,  0. ,  0.5,  1. ],\n",
+       "       [-1. , -0.5,  0. ,  0.5,  1. ],\n",
+       "       [-1. , -0.5,  0. ,  0.5,  1. ],\n",
+       "       [-1. , -0.5,  0. ,  0.5,  1. ]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# まずガウシアンフィルタを作成するために 5 x 5 のメッシュグリッドを作成する\n",
+    "ind = [-1., -0.5, 0., 0.5, 1.]\n",
+    "X,Y = np.meshgrid(ind, ind)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.36787944, 0.53526143, 0.60653066, 0.53526143, 0.36787944],\n",
+       "       [0.53526143, 0.77880078, 0.8824969 , 0.77880078, 0.53526143],\n",
+       "       [0.60653066, 0.8824969 , 1.        , 0.8824969 , 0.60653066],\n",
+       "       [0.53526143, 0.77880078, 0.8824969 , 0.77880078, 0.53526143],\n",
+       "       [0.36787944, 0.53526143, 0.60653066, 0.53526143, 0.36787944]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 以下のG は (0,0)の値が1.0で、正規化されていないガウシアンフィルタである\n",
+    "G = np.exp(-(np.multiply(X,X) + np.multiply(Y,Y))/2)\n",
+    "G"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -68,18 +147,13 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "ind = [-1., -0.5, 0., 0.5, 1.]\n",
-    "X,Y = np.meshgrid(ind, ind)\n",
-    "X\n",
-    "G = np.exp(-(np.multiply(X,X) + np.multiply(Y,Y))/2)\n",
-    "G\n",
     "from skimage import data, color\n",
     "cat = color.rgb2gray(data.chelsea())\n",
     "from scipy import signal\n",
     "blurred_cat = signal.convolve2d(cat, G, mode='valid')\n",
     "import matplotlib.pyplot as plt\n",
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(10,4),sharex=True, sharey=True)\n",
+    "\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(10,4), sharex=True, sharey=True)\n",
     "ax1.axis('off')\n",
     "ax1.imshow(cat, cmap=plt.cm.gray)\n",
     "ax1.set_title('Input image')\n",
@@ -90,6 +164,13 @@
     "ax2.set_title('After convolving with a Gaussian filter')\n",
     "ax2.set_adjustable('box', share=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
