シングルクォテーションに揃える

--- a/2-2-1.ipynb
+++ b/2-2-1.ipynb
@@ -89,7 +89,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "listen_count = pd.read_csv(\"data/millionsong/train_triplets.txt.zip\", header=None, delimiter=\"\\t\", compression='zip')\n",
+    "listen_count = pd.read_csv('data/millionsong/train_triplets.txt.zip', header=None, delimiter='\\t', compression='zip')\n",
     "\n",
     "# このデータはユーザID、曲ID、再生回数の3つの列で構成されます。\n",
     "# 再生回数 0 を含まないため、単に再生回数の列をすべて 1 で上書きすることで\n",
