--- a/2-2-2.ipynb
+++ b/2-2-2.ipynb
@@ -211,10 +211,10 @@
     "import seaborn as sns\n",
     "\n",
     "# レビュー件数のヒストグラムを描画\n",
-    "sns.set_style(\"whitegrid\")\n",
+    "sns.set_style('whitegrid')\n",
     "fig, ax = plt.subplots()\n",
-    "biz_df[\"review_count\"].hist(ax=ax, bins=100)\n",
-    "ax.set_yscale(\"log\")\n",
+    "biz_df['review_count'].hist(ax=ax, bins=100)\n",
+    "ax.set_yscale('log')\n",
     "ax.tick_params(labelsize=14)\n",
     "ax.set_xlabel('Review Count', fontsize=14)\n",
     "ax.set_ylabel('Occurrence', fontsize=14)"
@@ -333,7 +333,7 @@
     }
    ],
    "source": [
-    "deciles = biz_df[\"review_count\"].quantile([.1, .2, .3, .4, .5, .6, .7, .8, .9])\n",
+    "deciles = biz_df['review_count'].quantile([.1, .2, .3, .4, .5, .6, .7, .8, .9])\n",
     "deciles"
    ]
   },
@@ -365,14 +365,14 @@
    ],
    "source": [
     "# ヒストグラムに十分位数を上書きする\n",
-    "sns.set_style(\"whitegrid\")\n",
+    "sns.set_style('whitegrid')\n",
     "fig, ax = plt.subplots()\n",
-    "biz_df[\"review_count\"].hist(ax=ax, bins=100)\n",
+    "biz_df['review_count'].hist(ax=ax, bins=100)\n",
     "for pos in deciles:\n",
-    "    handle = plt.axvline(pos, color=\"r\")\n",
-    "ax.legend([handle], [\"deciles\"], fontsize=14)\n",
-    "ax.set_yscale(\"log\")\n",
-    "ax.set_xscale(\"log\")\n",
+    "    handle = plt.axvline(pos, color='r')\n",
+    "ax.legend([handle], ['deciles'], fontsize=14)\n",
+    "ax.set_yscale('log')\n",
+    "ax.set_xscale('log')\n",
     "ax.tick_params(labelsize=14)\n",
     "ax.set_xlabel('Review Count', fontsize=14)\n",
     "ax.set_ylabel('Occurrence', fontsize=14)"
