--- a/7-1.ipynb
+++ b/7-1.ipynb
@@ -61,22 +61,22 @@
     "figure = plt.figure()\n",
     "plt.subplot(221)\n",
     "plt.scatter(blobs[:, 0], blobs[:, 1], c=blob_labels, cmap='gist_rainbow')\n",
-    "plt.title(\"(a) Four randomly generated blobs\", fontsize=14)\n",
+    "plt.title('(a) Four randomly generated blobs', fontsize=14)\n",
     "plt.axis('off')\n",
     "\n",
     "plt.subplot(222)\n",
     "plt.scatter(blobs[:, 0], blobs[:, 1], c=clusters_blob, cmap='gist_rainbow')\n",
-    "plt.title(\"(b) Clusters found via K-means\", fontsize=14)\n",
+    "plt.title('(b) Clusters found via K-means', fontsize=14)\n",
     "plt.axis('off')\n",
     "\n",
     "plt.subplot(223)\n",
     "plt.scatter(uniform[:, 0], uniform[:, 1])\n",
-    "plt.title(\"(c) 1000 randomly generated points\", fontsize=14)\n",
+    "plt.title('(c) 1000 randomly generated points', fontsize=14)\n",
     "plt.axis('off')\n",
     "\n",
     "plt.subplot(224)\n",
     "plt.scatter(uniform[:, 0], uniform[:, 1], c=clusters_uniform, cmap='gist_rainbow')\n",
-    "plt.title(\"(d) Clusters found via K-means\", fontsize=14)\n",
+    "plt.title('(d) Clusters found via K-means', fontsize=14)\n",
     "plt.axis('off')"
    ]
   },
