--- a/7-3.ipynb
+++ b/7-3.ipynb
@@ -1788,7 +1788,7 @@
     "\n",
     "### クラス分類の性能をROC曲線を使って評価するためのヘルパ関数\n",
     "def test_roc(model, data, labels):\n",
-    "    if hasattr(model, \"decision_function\"):\n",
+    "    if hasattr(model, 'decision_function'):\n",
     "        predictions = model.decision_function(data)\n",
     "    else:\n",
     "        predictions = model.predict_proba(data)[:,1]\n",
