--- a/9.ipynb
+++ b/9.ipynb
@@ -90,7 +90,7 @@
     "    feature_df = pd.concat(df_list, axis=1, sort=True)\n",
     "    return feature_df.fillna(0)\n",
     "\n",
-    "year_features = pd.get_dummies(model_df[\"year\"].astype('category'))\n",
+    "year_features = pd.get_dummies(model_df['year'].astype('category'))\n",
     "fos_features = feature_array(model_df['fos'])\n",
     "first_features = fos_features.join(year_features).T\n",
     "\n",
@@ -349,7 +349,7 @@
     "sns.set()\n",
     "ax = sns.heatmap(first_items.fillna(0), \n",
     "                 vmin=0, vmax=1, \n",
-    "                 cmap=\"YlGnBu\", \n",
+    "                 cmap='YlGnBu', \n",
     "                 xticklabels=250, yticklabels=250)\n",
     "ax.tick_params(labelsize=12)"
    ]
@@ -483,8 +483,8 @@
     "year_min = model_df['year'].min()\n",
     "year_max = model_df['year'].max()\n",
     "\n",
-    "print(\"Year spread: \", year_min,\" - \", year_max)\n",
-    "print(\"Quantile spread:\\n\", model_df['year'].quantile([0.25, 0.5, 0.75]))\n",
+    "print('Year spread: ', year_min, ' - ', year_max)\n",
+    "print('Quantile spread:\\n', model_df['year'].quantile([0.25, 0.5, 0.75]))\n",
     "\n",
     "# 分布を確認するために出版年をプロットする\n",
     "fig, ax = plt.subplots()\n",
@@ -618,7 +618,7 @@
    "source": [
     "second_features = np.append(X_fos, X_yrs, axis = 1)\n",
     "\n",
-    "print(\"The power of feature engineering saves us, in bytes: \",\n",
+    "print('The power of feature engineering saves us, in bytes: ',\n",
     "         getsizeof(first_features) - getsizeof(second_features))\n",
     "\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
