9章指摘反映
print('Our pandas Series, in bytes: ', X_fos.nbytes)に変更

--- a/9.ipynb
+++ b/9.ipynb
@@ -590,7 +590,7 @@
     "X_fos = fos_features.values\n",
     "\n",
     "print('Our pandas Series, in bytes: ', getsizeof(fos_features))\n",
-    "print('Our hashed numpy array, in bytes: ', getsizeof(X_fos))"
+    "print('Our pandas Series, in bytes: ', X_fos.nbytes)"
    ]
   },
   {
@@ -953,7 +953,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
